# wellets-cli

./: .env.example  .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  settings.toml
.github/: rename_project.sh
.github/backup/: setup.py
.github/workflows/: main.yml  release.yml
tests/: test_base.py  test_config.py
wellets_cli/: __main__.py  api.py  auth.py  base.py  chart.py  cli.py  config.py  model.py  prompt.py  question.py  util.py  validator.py
wellets_cli/commands/: accumulation.py  asset.py  config.py  currency.py  dashboard.py  investment.py  login.py  portfolio.py  register.py  transaction.py  transfer.py  wallet.py  whoami.py
